make sure on safari the banner is plain whitout rendering tweeks

--- a/sass-partial/_parameters.scss
+++ b/sass-partial/_parameters.scss
@@ -75,7 +75,6 @@ $thumbnail-banner--background-color: rgb(255, 255, 255) !default;
 $thumbnail-banner--height: 30px !default;
 $thumbnail-banner--color: inherit !default;
 $thumbnail-banner--font-size: inherit !default;
-$thumbnail-banner--line-height: inherit !default;
 $thumbnail-banner--font-weight: inherit !default;
 $thumbnail-banner--font-style: inherit !default;
 
